--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "bootstrap-sass": "^3.4.1",
     "core-js": "^3.4.4",
+    "element-ui": "^2.13.0",
     "vant": "^2.4.4",
     "vue": "^2.6.10",
     "vue-router": "^3.1.5"
@@ -37,7 +38,7 @@
       "eslint:recommended"
     ],
     "rules": {
-      "no-console":"off"
+      "no-console": "off"
     },
     "parserOptions": {
       "parser": "babel-eslint"
