--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "axios": "^0.19.2",
     "bootstrap-sass": "^3.4.1",
     "core-js": "^3.4.4",
+    "dayjs": "^1.8.19",
+    "echarts": "^4.6.0",
     "element-ui": "^2.13.0",
+    "lodash": "^4.17.15",
+    "v-charts": "^1.19.0",
     "vant": "^2.4.4",
     "vue": "^2.6.10",
     "vue-router": "^3.1.5"
